website/websites/gp4/code/knucleotide-scala.log
BUILD COMMANDS FOR: knucleotide.scala

Wed Mar 21 19:29:16 PDT 2007

( if [ ! -d knucleotide.scala_run ] ; then mkdir knucleotide.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/knucleotide/knucleotide.scala knucleotide.scala_run/knucleotide.scala
( cd knucleotide.scala_run ; /opt/scala-2.4.0/bin/scalac knucleotide.scala )
knucleotide.scala:95: error: value isEmpty is not a member of Counter[A]
      while (!bucket.isEmpty) {
                    ^
knucleotide.scala:96: error: value head is not a member of Counter[A]
         if (elemEquals(entryKey(bucket.head), elem)){
                                       ^
knucleotide.scala:97: error: value head is not a member of Counter[A]
            bucket.head.inc
                  ^
knucleotide.scala:100: error: value tail is not a member of Counter[A]
         bucket = bucket.tail
                        ^
knucleotide.scala:107: error: value isEmpty is not a member of Counter[A]
      while (!bucket.isEmpty) {
                    ^
knucleotide.scala:108: error: value head is not a member of Counter[A]
         if (elemEquals(entryKey(bucket.head), elem)){
                                       ^
knucleotide.scala:109: error: value head is not a member of Counter[A]
            return bucket.head.value
                         ^
knucleotide.scala:111: error: value tail is not a member of Counter[A]
         bucket = bucket.tail
                        ^
8 errors found
make[3]: [knucleotide.scala_run] Error 1 (ignored)
touch knucleotide.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath knucleotide.scala_run knucleotide %A
************************************************************
*   TEST (knucleotide.scala_run) FAILED - ERROR:  knucleotide.scala_out differs from Output.10000
************************************************************
-rw-r--r-- 1 dunham users 245 Dec 29 20:51 Output.10000
-rw-r--r-- 1 dunham users  26 Mar 21 19:29 knucleotide.scala_out


PROGRAM OUTPUT
==============
no such file: knucleotide
